Products Table View Layout Bug

--- a/src/app/dashboard/products/products.component.scss
+++ b/src/app/dashboard/products/products.component.scss
@@ -294,6 +294,13 @@
       }
     }
   }
+
+  .flex-middle {
+    display:flex!important;
+    align-items: center;
+    height:100%;
+    line-height:1.25!important;
+  }
 }
 
 @media all and (max-width: 768px) {
